qt/multimedia/gen_qcameraexposure.nim

import Qt5MultimediaWidgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt5MultimediaWidgets")
{.compile("gen_qcameraexposure.cpp", cflags).}


type QCameraExposureFlashMode* = cint
const
  QCameraExposureFlashAuto* = 1
  QCameraExposureFlashOff* = 2
  QCameraExposureFlashOn* = 4
  QCameraExposureFlashRedEyeReduction* = 8
  QCameraExposureFlashFill* = 16
  QCameraExposureFlashTorch* = 32
  QCameraExposureFlashVideoLight* = 64
  QCameraExposureFlashSlowSyncFrontCurtain* = 128
  QCameraExposureFlashSlowSyncRearCurtain* = 256
  QCameraExposureFlashManual* = 512



type QCameraExposureExposureMode* = cint
const
  QCameraExposureExposureAuto* = 0
  QCameraExposureExposureManual* = 1
  QCameraExposureExposurePortrait* = 2
  QCameraExposureExposureNight* = 3
  QCameraExposureExposureBacklight* = 4
  QCameraExposureExposureSpotlight* = 5
  QCameraExposureExposureSports* = 6
  QCameraExposureExposureSnow* = 7
  QCameraExposureExposureBeach* = 8
  QCameraExposureExposureLargeAperture* = 9
  QCameraExposureExposureSmallAperture* = 10
  QCameraExposureExposureAction* = 11
  QCameraExposureExposureLandscape* = 12
  QCameraExposureExposureNightPortrait* = 13
  QCameraExposureExposureTheatre* = 14
  QCameraExposureExposureSunset* = 15
  QCameraExposureExposureSteadyPhoto* = 16
  QCameraExposureExposureFireworks* = 17
  QCameraExposureExposureParty* = 18
  QCameraExposureExposureCandlelight* = 19
  QCameraExposureExposureBarcode* = 20
  QCameraExposureExposureModeVendor* = 1000



type QCameraExposureMeteringMode* = cint
const
  QCameraExposureMeteringMatrix* = 1
  QCameraExposureMeteringAverage* = 2
  QCameraExposureMeteringSpot* = 3



import gen_qcameraexposure_types
export gen_qcameraexposure_types

import
  gen_qobject,
  gen_qobjectdefs,
  gen_qpoint
export
  gen_qobject,
  gen_qobjectdefs,
  gen_qpoint

type cQCameraExposure*{.exportc: "QCameraExposure", incompleteStruct.} = object

proc fcQCameraExposure_metaObject(self: pointer, ): pointer {.importc: "QCameraExposure_metaObject".}
proc fcQCameraExposure_metacast(self: pointer, param1: cstring): pointer {.importc: "QCameraExposure_metacast".}
proc fcQCameraExposure_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QCameraExposure_metacall".}
proc fcQCameraExposure_tr(s: cstring): struct_miqt_string {.importc: "QCameraExposure_tr".}
proc fcQCameraExposure_trUtf8(s: cstring): struct_miqt_string {.importc: "QCameraExposure_trUtf8".}
proc fcQCameraExposure_isAvailable(self: pointer, ): bool {.importc: "QCameraExposure_isAvailable".}
proc fcQCameraExposure_flashMode(self: pointer, ): cint {.importc: "QCameraExposure_flashMode".}
proc fcQCameraExposure_isFlashModeSupported(self: pointer, mode: cint): bool {.importc: "QCameraExposure_isFlashModeSupported".}
proc fcQCameraExposure_isFlashReady(self: pointer, ): bool {.importc: "QCameraExposure_isFlashReady".}
proc fcQCameraExposure_exposureMode(self: pointer, ): cint {.importc: "QCameraExposure_exposureMode".}
proc fcQCameraExposure_isExposureModeSupported(self: pointer, mode: cint): bool {.importc: "QCameraExposure_isExposureModeSupported".}
proc fcQCameraExposure_exposureCompensation(self: pointer, ): float64 {.importc: "QCameraExposure_exposureCompensation".}
proc fcQCameraExposure_meteringMode(self: pointer, ): cint {.importc: "QCameraExposure_meteringMode".}
proc fcQCameraExposure_isMeteringModeSupported(self: pointer, mode: cint): bool {.importc: "QCameraExposure_isMeteringModeSupported".}
proc fcQCameraExposure_spotMeteringPoint(self: pointer, ): pointer {.importc: "QCameraExposure_spotMeteringPoint".}
proc fcQCameraExposure_setSpotMeteringPoint(self: pointer, point: pointer): void {.importc: "QCameraExposure_setSpotMeteringPoint".}
proc fcQCameraExposure_isoSensitivity(self: pointer, ): cint {.importc: "QCameraExposure_isoSensitivity".}
proc fcQCameraExposure_aperture(self: pointer, ): float64 {.importc: "QCameraExposure_aperture".}
proc fcQCameraExposure_shutterSpeed(self: pointer, ): float64 {.importc: "QCameraExposure_shutterSpeed".}
proc fcQCameraExposure_requestedIsoSensitivity(self: pointer, ): cint {.importc: "QCameraExposure_requestedIsoSensitivity".}
proc fcQCameraExposure_requestedAperture(self: pointer, ): float64 {.importc: "QCameraExposure_requestedAperture".}
proc fcQCameraExposure_requestedShutterSpeed(self: pointer, ): float64 {.importc: "QCameraExposure_requestedShutterSpeed".}
proc fcQCameraExposure_supportedIsoSensitivities(self: pointer, ): struct_miqt_array {.importc: "QCameraExposure_supportedIsoSensitivities".}
proc fcQCameraExposure_supportedApertures(self: pointer, ): struct_miqt_array {.importc: "QCameraExposure_supportedApertures".}
proc fcQCameraExposure_supportedShutterSpeeds(self: pointer, ): struct_miqt_array {.importc: "QCameraExposure_supportedShutterSpeeds".}
proc fcQCameraExposure_setFlashMode(self: pointer, mode: cint): void {.importc: "QCameraExposure_setFlashMode".}
proc fcQCameraExposure_setExposureMode(self: pointer, mode: cint): void {.importc: "QCameraExposure_setExposureMode".}
proc fcQCameraExposure_setMeteringMode(self: pointer, mode: cint): void {.importc: "QCameraExposure_setMeteringMode".}
proc fcQCameraExposure_setExposureCompensation(self: pointer, ev: float64): void {.importc: "QCameraExposure_setExposureCompensation".}
proc fcQCameraExposure_setManualIsoSensitivity(self: pointer, iso: cint): void {.importc: "QCameraExposure_setManualIsoSensitivity".}
proc fcQCameraExposure_setAutoIsoSensitivity(self: pointer, ): void {.importc: "QCameraExposure_setAutoIsoSensitivity".}
proc fcQCameraExposure_setManualAperture(self: pointer, aperture: float64): void {.importc: "QCameraExposure_setManualAperture".}
proc fcQCameraExposure_setAutoAperture(self: pointer, ): void {.importc: "QCameraExposure_setAutoAperture".}
proc fcQCameraExposure_setManualShutterSpeed(self: pointer, seconds: float64): void {.importc: "QCameraExposure_setManualShutterSpeed".}
proc fcQCameraExposure_setAutoShutterSpeed(self: pointer, ): void {.importc: "QCameraExposure_setAutoShutterSpeed".}
proc fcQCameraExposure_flashReady(self: pointer, param1: bool): void {.importc: "QCameraExposure_flashReady".}
proc fQCameraExposure_connect_flashReady(self: pointer, slot: int) {.importc: "QCameraExposure_connect_flashReady".}
proc fcQCameraExposure_apertureChanged(self: pointer, param1: float64): void {.importc: "QCameraExposure_apertureChanged".}
proc fQCameraExposure_connect_apertureChanged(self: pointer, slot: int) {.importc: "QCameraExposure_connect_apertureChanged".}
proc fcQCameraExposure_apertureRangeChanged(self: pointer, ): void {.importc: "QCameraExposure_apertureRangeChanged".}
proc fQCameraExposure_connect_apertureRangeChanged(self: pointer, slot: int) {.importc: "QCameraExposure_connect_apertureRangeChanged".}
proc fcQCameraExposure_shutterSpeedChanged(self: pointer, speed: float64): void {.importc: "QCameraExposure_shutterSpeedChanged".}
proc fQCameraExposure_connect_shutterSpeedChanged(self: pointer, slot: int) {.importc: "QCameraExposure_connect_shutterSpeedChanged".}
proc fcQCameraExposure_shutterSpeedRangeChanged(self: pointer, ): void {.importc: "QCameraExposure_shutterSpeedRangeChanged".}
proc fQCameraExposure_connect_shutterSpeedRangeChanged(self: pointer, slot: int) {.importc: "QCameraExposure_connect_shutterSpeedRangeChanged".}
proc fcQCameraExposure_isoSensitivityChanged(self: pointer, param1: cint): void {.importc: "QCameraExposure_isoSensitivityChanged".}
proc fQCameraExposure_connect_isoSensitivityChanged(self: pointer, slot: int) {.importc: "QCameraExposure_connect_isoSensitivityChanged".}
proc fcQCameraExposure_exposureCompensationChanged(self: pointer, param1: float64): void {.importc: "QCameraExposure_exposureCompensationChanged".}
proc fQCameraExposure_connect_exposureCompensationChanged(self: pointer, slot: int) {.importc: "QCameraExposure_connect_exposureCompensationChanged".}
proc fcQCameraExposure_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QCameraExposure_tr2".}
proc fcQCameraExposure_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QCameraExposure_tr3".}
proc fcQCameraExposure_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QCameraExposure_trUtf82".}
proc fcQCameraExposure_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QCameraExposure_trUtf83".}
proc fcQCameraExposure_supportedIsoSensitivities1(self: pointer, continuous: ptr bool): struct_miqt_array {.importc: "QCameraExposure_supportedIsoSensitivities1".}
proc fcQCameraExposure_supportedApertures1(self: pointer, continuous: ptr bool): struct_miqt_array {.importc: "QCameraExposure_supportedApertures1".}
proc fcQCameraExposure_supportedShutterSpeeds1(self: pointer, continuous: ptr bool): struct_miqt_array {.importc: "QCameraExposure_supportedShutterSpeeds1".}


func init*(T: type QCameraExposure, h: ptr cQCameraExposure): QCameraExposure =
  T(h: h)
proc metaObject*(self: QCameraExposure, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQCameraExposure_metaObject(self.h))

proc metacast*(self: QCameraExposure, param1: cstring): pointer =

  fcQCameraExposure_metacast(self.h, param1)

proc metacall*(self: QCameraExposure, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQCameraExposure_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QCameraExposure, s: cstring): string =

  let v_ms = fcQCameraExposure_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QCameraExposure, s: cstring): string =

  let v_ms = fcQCameraExposure_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc isAvailable*(self: QCameraExposure, ): bool =

  fcQCameraExposure_isAvailable(self.h)

proc flashMode*(self: QCameraExposure, ): QCameraExposureFlashMode =

  QCameraExposureFlashMode(fcQCameraExposure_flashMode(self.h))

proc isFlashModeSupported*(self: QCameraExposure, mode: QCameraExposureFlashMode): bool =

  fcQCameraExposure_isFlashModeSupported(self.h, cint(mode))

proc isFlashReady*(self: QCameraExposure, ): bool =

  fcQCameraExposure_isFlashReady(self.h)

proc exposureMode*(self: QCameraExposure, ): QCameraExposureExposureMode =

  QCameraExposureExposureMode(fcQCameraExposure_exposureMode(self.h))

proc isExposureModeSupported*(self: QCameraExposure, mode: QCameraExposureExposureMode): bool =

  fcQCameraExposure_isExposureModeSupported(self.h, cint(mode))

proc exposureCompensation*(self: QCameraExposure, ): float64 =

  fcQCameraExposure_exposureCompensation(self.h)

proc meteringMode*(self: QCameraExposure, ): QCameraExposureMeteringMode =

  QCameraExposureMeteringMode(fcQCameraExposure_meteringMode(self.h))

proc isMeteringModeSupported*(self: QCameraExposure, mode: QCameraExposureMeteringMode): bool =

  fcQCameraExposure_isMeteringModeSupported(self.h, cint(mode))

proc spotMeteringPoint*(self: QCameraExposure, ): gen_qpoint.QPointF =

  gen_qpoint.QPointF(h: fcQCameraExposure_spotMeteringPoint(self.h))

proc setSpotMeteringPoint*(self: QCameraExposure, point: gen_qpoint.QPointF): void =

  fcQCameraExposure_setSpotMeteringPoint(self.h, point.h)
